# null_gui_plugin

./: CMakeLists.txt
include/: Button.hpp  Component.hpp  Gui.hpp  GuiFactory.hpp  GuiPlugin.hpp  Label.hpp  Menu.hpp  MenuBar.hpp  MenuItem.hpp  Rectangle.hpp  Separator.hpp  Window.hpp
src/: GuiFactory.cpp  GuiPlugin.cpp
